--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,5 +20,9 @@
             {{/if}}
         </nav>
     </header>
+    <main class="container container-fluid mt-5">
+        {{{body}}}
+    </main>
+
 </body>
 </html>
