created sign up and log in page handlebars with form

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,3 +1,48 @@
 <div>
-    <h1>signup</h1>
+    <section>
+    
+        <div class="signin">
+
+            <div class="content">
+
+                <h2>Sign Up</h2>
+
+                <div class="form">
+
+                    <div class="inputBox">
+
+                        <input type="text" required> <i>Name</i>
+
+                    </div>
+
+                    <div class="inputBox">
+
+                        <input type="text" required> <i>Email</i>
+
+                    </div>
+
+                    <div class="inputBox">
+
+                        <input type="password" required> <i>Password</i>
+
+                    </div>
+
+                    <div class="links"> <a href="/login">Log In</a>
+
+                    </div>
+
+                    <div class="inputBox">
+
+                        <input type="submit" value="Login">
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </section> <!-- partial -->
+
 </div>
