--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/jass.css">
+    <link rel="stylesheet" href="/css/custom.css">
 </head>
 <body>
     <header class="display-flex justify-space-between align-center p-2">
@@ -21,6 +22,7 @@
         </nav>
     </header>
     <main class="container container-fluid mt-5">
+        
         {{{body}}}
     </main>
 
