--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,3 +1,41 @@
 <div>
-    <h1>login</h1>
+     <section>
+
+   <div class="signin"> 
+
+    <div class="content"> 
+
+     <h2>Log In</h2> 
+
+     <div class="form"> 
+
+      <div class="inputBox"> 
+
+       <input type="text" required> <i>Email</i> 
+
+      </div> 
+
+      <div class="inputBox"> 
+
+       <input type="password" required> <i>Password</i> 
+
+      </div> 
+
+      <div class="links"> <a href="/signup">Sign Up</a> 
+
+      </div> 
+
+      <div class="inputBox"> 
+
+       <input type="submit" value="Login"> 
+
+      </div> 
+
+     </div> 
+
+    </div> 
+
+   </div> 
+
+  </section> <!-- partial --> 
 </div>
