--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,7 @@
 <div class="container">
+    {{#if logged_in}}
+    <h1>Hello {{name}}</h1>
+    {{else}}
     <h1 class="text-center"><a href="/login">Login</a> or <a href="/signup">sign up</a> today!</h1>
-    
+    {{/if}}
 </div>
