--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -7,37 +7,31 @@
 
                 <h2>Sign Up</h2>
 
-                <div class="form">
+                <form class="form" id="signup-form">
 
                     <div class="inputBox">
 
-                        <input type="text" required> <i>Name</i>
-
-                    </div>
-
-                    <div class="inputBox">
-
-                        <input type="text" required> <i>Email</i>
+                        <input id="signup-name" type="text" required> <i>Name</i>
 
                     </div>
 
                     <div class="inputBox">
 
-                        <input type="password" required> <i>Password</i>
-
-                    </div>
-
-                    <div class="links"> <a href="/login">Log In</a>
+                        <input id="signup-email" type="text" required> <i>Email</i>
 
                     </div>
 
                     <div class="inputBox">
 
-                        <input type="submit" value="Login">
+                        <input id="signup-password" type="password" required> <i>Password</i>
 
                     </div>
 
-                </div>
+
+                    <button id="signup-btn" type="submit" class="btn">Signup</button>
+
+                    <a href="/login">Log In Instead</a>
+                </form>
 
             </div>
 
@@ -46,3 +40,5 @@
     </section> <!-- partial -->
 
 </div>
+
+<script src="/js/signup.js"></script>
