--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -17,8 +17,8 @@ body
 section 
 {
   position: absolute;
-  width: 100vw;
-  height: 75vh;
+  width: 85vw;
+  height: 70vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -144,25 +144,40 @@ input[type="submit"]:active
 
 .main-title {
   color: rgba(49, 238, 49, 0.674);
-  font-size: xx-large;
-  border: 4px solid black;
+  font-size: 100px;
   box-shadow: 7px 8px 15px 2px #91ee91;
+  background-color: transparent;
+  text-decoration: none;
 }
 
 .main-links {
   padding: 0px 25px;
   color: rgba(49, 238, 49, 0.674);
-  font-size: 20px;
+  font-size: 30px;
+  text-decoration: none;
 }
 
 .main-links:hover, .main-title:hover {
   color: rgb(6, 98, 6) !important;
+  cursor: pointer;
 }
 
 .logout-btn {
   border: none;
 }
 
+
+/* ----------------------------------------- */
+/* HOME PAGE STYLING */
+.home-links {
+  text-decoration: none;
+  color: rgba(49, 238, 49, 0.674);
+}
+
+.home-header {
+  text-align: center;
+  
+}
 
 /* ------------------------------------------*/
 /* MEDIA QUERIES FOR LOGIN AND SIGN UP FORMS */
