--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,7 +1,7 @@
 <div class="container">
     {{#if logged_in}}
-    <h1>Hello {{name}}</h1>
+    <h1 class="home-header">Hello {{name}}</h1>
     {{else}}
-    <h1 class="text-center"><a href="/login">Login</a> or <a href="/signup">sign up</a> today!</h1>
+    <h1 class="text-center"><a class="home-links" href="/login">Login</a> or <a class="home-links" href="/signup">sign up</a> today!</h1>
     {{/if}}
 </div>
